upgrade openapigenerator to 5.4.0
